2005-01-28  Nick Garnett  <nickg@ecoscentric.com>

	* src/legacy_dev.c (legacy_flash_init): Assign flash_info.pf from
	flash device field. Otherwise drivers try to call an invalid
	address.
	(legacy_flash_program): The last argument to flash_program_buf()
	is not the block size but the programming buffer size.

2005-01-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash_legacy.h: Undef HAL_FLASH_CACHES_* macros if the HAL
	supplied them and they're not needed.
	
	* src/legacy_api.c (flash_errmsg): Was missing. Add.

2004-12-02  Bart Veer  <bartv@ecoscentric.com>

	* include/flash_dev.h: now provides everything needed by flash
	device drivers.

	* include/flash_priv.h: removed, subsumed by flash_dev.h
	
	* include/flash.h, src/flash.c, src/flashiodev.c,
	  src/legacy_api.c, src/legacy_dev.c:
	Replace implicit #include's of <cyg/io/flash_priv.h> with explicit
	#include's of <cyg/io/flash_dev.h>

2004-11-29  Bart Veer  <bartv@ecoscentric.com>
	
	* include/flash_priv.h, src/flash.c, src/legacy_dev.c: remove
	hwr_map_error() from V2 drivers

	* include/flash_priv.h, src/flash.c, src/legacy_dev.c: provide
	dummy init/query/lock/unlock functions for use by device drivers
	which do not support/need this functionality. Export the
	anonymizer function.

2004-11-28  Bart Veer  <bartv@ecoscentric.com>

	* src/flash.c (flash_sort_and_check): previous patch would have
	resulted in init failure if only one device initialized.
	(cyg_flash_get_info): handle per-device init flag

2004-11-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (flash_sort_and_check): Don't add devices which
	failed to initialise onto the list. Don't bother sorting the
	list if its empty or only has one entry.
	* src/flash.c (find_dev): All devices on the list are initialised so
	don't both checking the init flag.

2004-11-24  Bart Veer  <bartv@ecoscentric.com>

	* cdl/io_flash.cdl, src/flash.c, src/flash_legacy.h,
	src/legacy_dev.c: add support for V2 drivers which can take care